--- a/app/src/main/res/layout/activity_authenticator.xml
+++ b/app/src/main/res/layout/activity_authenticator.xml
@@ -48,7 +48,7 @@
                 android:inputType="text"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:text="jinrilong19880603"/>
+                android:text=""/>
 
             <EditText
                 android:id="@+id/password"
@@ -61,7 +61,7 @@
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:text="l1998419"/>
+                android:text=""/>
 
             <EditText
                 android:id="@+id/url"
