--- a/app/src/main/res/layout/activity_authenticator.xml
+++ b/app/src/main/res/layout/activity_authenticator.xml
@@ -3,7 +3,6 @@
        tools:context=".authenticator.AuthenticatorActivity">
 
     <!-- Login progress -->
-
     <LinearLayout
         android:id="@+id/login_status"
         android:layout_width="wrap_content"
@@ -30,7 +29,6 @@
     </LinearLayout>
 
     <!-- Login form -->
-
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
@@ -47,8 +45,7 @@
                 android:hint="@string/prompt_user"
                 android:inputType="text"
                 android:maxLines="1"
-                android:singleLine="true"
-                android:text=""/>
+                android:text="admin"/>
 
             <EditText
                 android:id="@+id/password"
@@ -60,8 +57,7 @@
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:singleLine="true"
-                android:text=""/>
+                android:text="qazxsw"/>
 
             <EditText
                 android:id="@+id/url"
@@ -70,7 +66,7 @@
                 android:ems="10"
                 android:hint="@string/prompt_url"
                 android:inputType="textUri"
-                android:text="https://">
+                android:text="http://db.hicomtech.biz:9000/owncloud/remote.php/dav">
 
                 <requestFocus/>
             </EditText>
@@ -81,8 +77,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_accountname"
                 android:inputType="text"
-                android:maxLines="1"
-                android:singleLine="true"/>
+                android:maxLines="1"/>
 
             <Button
                 android:id="@+id/sign_in_button"
